Simplified msa_start & msa_install

--- a/package.json
+++ b/package.json
@@ -7,4 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nicolas CARREZ <nicolas.carrez@gmail.com>",
-  "license": "MIT"}
+  "license": "MIT",
+  "msaKey": "sheet",
+  "msaDependecies": {
+    "db": "../msa-db",
+    "user": "../msa-user",
+    "fs": "../msa-fs"
+  }
+}
