--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mysimpleapp/msa-sheet",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "MySimpleApp module offering the possibility to create WYSIWYG sheets",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,8 @@
   "license": "ISC",
   "msaKey": "sheet",
   "msaDependecies": {
-    "db": "../msa-db",
-    "user": "../msa-user",
-    "fs": "../msa-fs"
+    "db": "@mysimpleapp/msa-db",
+    "user": "@mysimpleapp/msa-user",
+    "fs": "@mysimpleapp/msa-fs"
   }
 }
